# DL-ML_Cesar

dlcv25-assignment-1-Cesar421/: README.md  pyproject.toml  trained_model.pth
dlcv25-assignment-1-Cesar421/.github/workflows/: test_action.yaml
dlcv25-assignment-1-Cesar421/src/mynet/: dataset.py  main.py  model.py  tests_personal.ipynb  utils.py  visualize.py
dlcv25-assignment-2-Cesar421/: .gitignore  README.md  TestGPU_Colab.ipynb  pyproject.toml
dlcv25-assignment-2-Cesar421/.github/workflows/: test_action.yaml
dlcv25-assignment-2-Cesar421/src/dlcv/: models.py  training.py  utils.py
dlcv25-assignment-2-Cesar421/tests/: test_stratified_lr.py
dlcv25-assignment-2-Cesar421/tools/: plot.py  train.py  visualize.py
dlcv25-assignment-3-Cesar421/: .gitignore  README.md  notebooktest.ipynb  pyproject.toml
dlcv25-assignment-3-Cesar421/.github/workflows/: test_action.yaml
dlcv25-assignment-3-Cesar421/dlcv3/: dataset.py  main.py  model.py
dlcv25-assignment-3-Cesar421/tests/: test_augs.py  test_models.py  test_summary.py  test_train_and_evaluate_models.py
